Subiendo cambios del router del frontEnd

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,8 @@
 <div class="container">
-	<app-usuarios></app-usuarios>
+	<!--<app-usuarios></app-usuarios>
+	<app-dashboard></app-dashboard>-->
+	<router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
+
+	  
