--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,3 +1,5 @@
 <div class="footer">
-    <p> Proyecto 0 Uniandes </p>
+    <button class="btn btn-success btn-block"  (click)="goToPage('create-user')">crear usuario</button>
 </div>
+
+
