--- a/frontend/src/app/components/usuarios/usuarios.component.html
+++ b/frontend/src/app/components/usuarios/usuarios.component.html
@@ -1,8 +1,8 @@
 <div class=jumbtron>
-	<h1 class="display-4 text-center">Creacion Usuario</h1>
-	<hr>
-	<div class="row">
-		<div class="col-md-12">
+	<div class="row justify-content-md-center">
+		<div class="col-auto col-md-6">
+			<h1 class="display text-center">Creacion Usuario</h1>
+			<hr>
 			<h6 class="text-center">
 			Crear Usuario
 			</h6>
