--- a/frontend/src/app/components/eventos/events/events.component.html
+++ b/frontend/src/app/components/eventos/events/events.component.html
@@ -17,7 +17,7 @@
 					<i class="fas fa-dumbbell"></i>
 				</div>
 			</div>
-			<input type="text" class="form-control" formControlName="apellido" placeholder="Categoría Evento">		
+			<input type="text" class="form-control" formControlName="categoria" placeholder="Categoría (COURSE, CONFERENCE, SEMINAR o CONGRESS">		
 		</div>
 	</div>
 
@@ -92,13 +92,13 @@
     	</div>
       </div>
       <div class="custom-file">
-        <input type="file" class="custom-file-input" id="inputGroupFile01"
+        <input type="file" class="custom-file-input" id="inputGroupFile01" (change)="onFileChanged($event)"
           aria-describedby="inputGroupFileAddon01">
         <label class="custom-file-label" for="inputGroupFile01">Foto Evento</label>
       </div>
     </div>
     <br>
     <div class="form-group">
-	    <button class="btn btn-success btn-block" [disabled]="form.invalid" type="sub"> <i class="fas fa-database"></i> Crear</button>
+	    <button class="btn btn-success btn-block" (click)="goToPage('events')" [disabled]="form.invalid" type="sub"> <i class="fas fa-database"></i> Crear</button>
     </div>
 </form>
