--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,12 +1,12 @@
 <div class=jumbtron>
-	<h1 class="display-4 text-center">Inicio Sesion</h1>
-	<hr>
-	<div class="row">
-		<div class="col-md-12">
+	<div class="row justify-content-md-center">
+		<div class="col-auto col-md-4">
+			<h1 class="display text-center">Inicio Sesion</h1>
+			<hr>
 			<h6 class="text-center">
 			Log In
 			</h6>
-            <app-users></app-users>
+            <app-iniciarsesion></app-iniciarsesion>
 		</div>
 	</div>
 </div>
