--- a/frontend/src/app/components/eventos/eventos.component.html
+++ b/frontend/src/app/components/eventos/eventos.component.html
@@ -2,13 +2,13 @@
 	<h1 class="display-4 text-center">Eventos</h1>
 	<hr>
 	<div class="row">
-		<div class="col-md-5">
+		<div class="col-md-4">
 			<h6 class="text-center">
-			Agregar Evento
+			Agregar o ver evento
 			</h6>
             <app-events></app-events>
 		</div>
-		<div class="col-md-7">
+		<div class="col-md-8">
 			<h6 class="text-center">
 			Listado de eventos
 			</h6>
