--- a/frontend/src/app/components/eventos/list-events/list-events.component.html
+++ b/frontend/src/app/components/eventos/list-events/list-events.component.html
@@ -1,12 +1,25 @@
 <table class="table table-sm">
+    <tr>
+        <td><span style="font-weight:bold">Nombre Evento</span></td>
+        <td><span style="font-weight:bold">Fecha Inicio</span></td>
+        <td><span style="font-weight:bold">Ubicacion</span></td>
+        <td><span style="font-weight:bold">Ver</span></td>
+        <td><span style="font-weight:bold">Edit</span></td>
+        <td><span style="font-weight:bold">Delete</span></td>
+    </tr>
     <tr *ngFor="let evento of EventoService.listaEventos">
         <td>{{ evento.event_name }}</td>
         <td>{{ evento.event_initial_date }}</td>
+        <td>{{ evento.event_place }}</td>
         <td>
-            <i class="far fa-edit fa-lg text-info" style="cursor: pointer;"></i> 
+            <i class="far fa-eye fa-lg text-info" (click)="ver(evento)" style="cursor: pointer;"></i> 
+        </td>
+        <td>
+            <i class="far fa-edit fa-lg text-info" (click)="editar(evento,'upd-event',evento.id)" style="cursor: pointer;"></i> 
         </td>
         <td>
             <i class="far fa-trash-alt fa-lg text-danger" (click)="eliminarEvento(evento.id)" style="cursor: pointer;"></i> 
         </td>
     </tr>
+    
 </table>
