--- a/frontend/src/app/components/eventos/list-events/list-events.component.html
+++ b/frontend/src/app/components/eventos/list-events/list-events.component.html
@@ -2,7 +2,7 @@
     <tr>
         <td><span style="font-weight:bold">Nombre Evento</span></td>
         <td><span style="font-weight:bold">Fecha Inicio</span></td>
-        <td><span style="font-weight:bold">Ubicacion</span></td>
+        <td><span style="font-weight:bold">Fecha Final</span></td>
         <td><span style="font-weight:bold">Ver</span></td>
         <td><span style="font-weight:bold">Edit</span></td>
         <td><span style="font-weight:bold">Delete</span></td>
@@ -10,7 +10,7 @@
     <tr *ngFor="let evento of EventoService.listaEventos">
         <td>{{ evento.event_name }}</td>
         <td>{{ evento.event_initial_date }}</td>
-        <td>{{ evento.event_place }}</td>
+        <td>{{ evento.event_final_date }}</td>
         <td>
             <i class="far fa-eye fa-lg text-info" (click)="ver(evento)" style="cursor: pointer;"></i> 
         </td>
