--- a/frontend/src/app/components/eventos/eventos.component.html
+++ b/frontend/src/app/components/eventos/eventos.component.html
@@ -1,5 +1,12 @@
 <div class=jumbtron>
-	<h1 class="display-4 text-center">Eventos</h1>
+	<div class="row">
+		<div class="col-md-10">
+			<h1 class="display-4 text-center">Eventos</h1>			
+		</div>
+		<div class="col-md-2">
+			<app-logout></app-logout>	
+		</div>
+	</div>
 	<hr>
 	<div class="row">
 		<div class="col-md-4">
