--- a/frontend/src/app/components/eventos/events/events.component.html
+++ b/frontend/src/app/components/eventos/events/events.component.html
@@ -54,10 +54,20 @@
 					<i class="fas fa-calendar-alt"></i>
 				</div>
 			</div>
-			<input type="text" class="form-control" formControlName="inicial" placeholder="Inicio   (yyyy-mm-ddThh:mm:ssZ)">		
+			<input type="datetime-local" class="form-control" value="2011-08-19T13:45:00" formControlName="inicial" placeholder="Inicio   (yyyy-mm-ddThh:mm:ssZ)">		
 		</div>
     </div>
 
+<!--
+	<div class="form-group">
+		<div class="input-group">
+	  		<label for="example-datetime-local-input" class="col-2 col-form-label">Date and time</label>
+	  			<div class="col-10">
+	  		  	<input class="form-control" type="datetime-local" value="2011-08-19T13:45:00" id="example-datetime-local-input">
+	  			</div>
+		</div>
+	</div>
+-->
 
 
     <div class="form-group">
@@ -67,7 +77,7 @@
 					<i class="fas fa-calendar-alt"></i>
 				</div>
 			</div>
-			<input type="text" class="form-control" formControlName="final" placeholder="Fin       (yyyy-mm-ddThh:mm:ssZ)">		
+			<input type="datetime-local" class="form-control" value="2011-08-19T13:45:00" formControlName="final" placeholder="Fin       (yyyy-mm-ddThh:mm:ssZ)">		
 		</div>
     </div>
 
